force-app/main/default/objects/Funding_Information__c/Funding_Information__c.object-meta.xml
<CustomObject>
    <label>Funding Information</label>
    <nameField>
        <displayFormat>FI-{0}</displayFormat>
        <label>Funding Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>