force-app/main/default/objects/Funding_Information__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Funding Informations</relationshipLabel>
    <relationshipName>Funding_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>