force-app/main/default/objects/Funding_Information__c/fields/Disbursements__c.field-meta.xml
<CustomField>
    <fullName>Disbursements__c</fullName>
    <label>Disbursements</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>