force-app/main/default/objects/Funding_Information__c/fields/NewFunds__c.field-meta.xml
<CustomField>
    <fullName>NewFunds__c</fullName>
    <label>New Funds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>