force-app/main/default/objects/Funding_Information__c/fields/PriorBalance__c.field-meta.xml
<CustomField>
    <fullName>PriorBalance__c</fullName>
    <label>Prior Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>